feat: New daterangepicker with predefined values

--- a/app/admin/templates/admin/admin_base.html
+++ b/app/admin/templates/admin/admin_base.html
@@ -34,6 +34,8 @@
     <!-- sweet alert framework -->
     <link rel="stylesheet" type="text/css"
         href="{{url_for('bp_admin.static', filename='bower_components/sweetalert/css/sweetalert.css')}}">
+    <!-- Datepicker with predefined values -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
     {% endblock %}
 
     {% block head %} {% endblock %}
@@ -90,6 +92,10 @@
 <!-- Jquery validate js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
 <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+<!-- Datepicker with predefined values -->
+<script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
+<script type="text/javascript" src="{{ url_for('bp_admin.static', filename='js/date-picker.js')}}"></script>
 <script>
     // Likes Global variables
     CSRF_TOKEN = "{{csrf_token()}}";
