--- a/prime_admin/templates/lms/dashboard.html
+++ b/prime_admin/templates/lms/dashboard.html
@@ -66,7 +66,6 @@
                     if (c.data.datasets.length <= 0){
                         return;
                     }
-                    console.log(c.data.datasets[0]);
                     var data = c.data.datasets[0].data;
                     for (let i in data) {
                        let bar = c.data.datasets[0]._meta['4'].data[i]._model;
@@ -110,15 +109,14 @@
         const chart_all_branches_ctx = document.getElementById('chart_all_branches');
         const chart_all_branches = new Chart(chart_all_branches_ctx, chart_all_branches_config);
         
+        var dateFrom = $("#filter_date").data('daterangepicker').startDate.format('YYYY-MM-DD');
+        var dateTo = $("#filter_date").data('daterangepicker').startDate.format('YYYY-MM-DD');
+
         init();
 
         function init(){
-            updateSalesAndExpenses();
+            updateCharts();
             updateChartSalesToday();
-            updateGrossSalesBreakdown();
-            updateExpensesBreakdown();
-            updateAllBranchesNetLose();
-            updateNetLose();
         }
 
         function updateChartSalesToday() {
@@ -132,9 +130,7 @@
                 });
         }
 
-        function updateSalesBreakdown(){
-            var dateFrom = $("#filter_date_from").val();
-            var dateTo = $("#filter_date_to").val();
+        function updateSalesBreakdown(dateFrom, dateTo){
             var branch = $("#filter_branch").val();
 
             $.getJSON(
@@ -143,15 +139,12 @@
                     $("#total_full_payment").html(response.data.total_full_payment);
                     $("#total_premium_payment").html(response.data.total_premium_payment);
                     $("#total").html(response.data.total);
-                    console.log("Success!");
                 }).fail(function () {
                     Swal.fire({ title: "Error Occured!", text: "Please refresh the page then try again!", icon: "error" });
                 });
         }
 
-        function updateGrossSalesBreakdown() {
-            var dateFrom = $("#filter_date_from").val();
-            var dateTo = $("#filter_date_to").val();
+        function updateGrossSalesBreakdown(dateFrom, dateTo) {
             var branch = $("#filter_branch").val();
 
             $.getJSON(
@@ -168,9 +161,7 @@
         }
 
 
-        function updateExpensesBreakdown() {
-            var dateFrom = $("#filter_date_from").val();
-            var dateTo = $("#filter_date_to").val();
+        function updateExpensesBreakdown(dateFrom, dateTo) {
             var branch = $("#filter_branch").val();
 
             $.getJSON(
@@ -187,9 +178,7 @@
         }
 
 
-        function updateAllBranchesNetLose() {
-            var dateFrom = $("#filter_date_from").val();
-            var dateTo = $("#filter_date_to").val();
+        function updateAllBranchesNetLose(dateFrom, dateTo) {
             var branch = $("#filter_branch").val();
 
             $.getJSON(
@@ -206,9 +195,7 @@
         }
 
 
-        function updateNetLose() {
-            var dateFrom = $("#filter_date_from").val();
-            var dateTo = $("#filter_date_to").val();
+        function updateNetLose(dateFrom, dateTo) {
             var branch = $("#filter_branch").val();
 
             $.getJSON(
@@ -225,10 +212,8 @@
         }
 
 
-        function updateSalesAndExpenses(){
+        function updateSalesAndExpenses(dateFrom, dateTo){
             var branch = $("#filter_branch").val();
-            var dateFrom = $("#filter_date_from").val();
-            var dateTo = $("#filter_date_to").val();
 
             $.ajax({
                 url: `/learning-management/api/dashboard/get-chart-data/${branch}?date_from=${dateFrom}&date_to=${dateTo}`,
@@ -272,34 +257,28 @@
                 }
             });
         }
+        console.log($("#filter_date").data('daterangepicker'));
 
-        $("#filter_date_from").change(function(){
-            updateSalesBreakdown();
-            updateSalesAndExpenses();
-            updateGrossSalesBreakdown();
-            updateExpensesBreakdown();
-            updateAllBranchesNetLose();
-            updateNetLose();
+        $("#filter_date").on('apply.daterangepicker', function(ev, picker){
+            dateFrom = picker.startDate.format('YYYY-MM-DD');
+            dateTo = picker.endDate.format('YYYY-MM-DD');
+            updateCharts();
         });
 
-        $("#filter_date_to").change(function(){
-            updateSalesBreakdown();
-            updateSalesAndExpenses();
-            updateGrossSalesBreakdown();
-            updateExpensesBreakdown();
-            updateAllBranchesNetLose();
-            updateNetLose();
-        });
 
         $("#filter_branch").change(function(){
-            updateSalesBreakdown();
-            updateSalesAndExpenses();
+            updateCharts();
             updateChartSalesToday();
-            updateGrossSalesBreakdown();
-            updateExpensesBreakdown();
-            updateAllBranchesNetLose();
-            updateNetLose();
         });
+
+        function updateCharts(){
+            updateSalesBreakdown(dateFrom, dateTo);
+            updateSalesAndExpenses(dateFrom, dateTo);
+            updateGrossSalesBreakdown(dateFrom, dateTo);
+            updateExpensesBreakdown(dateFrom, dateTo);
+            updateAllBranchesNetLose(dateFrom, dateTo);
+            updateNetLose(dateFrom, dateTo);
+        }
     });
 </script>
 {% endblock %}
@@ -329,16 +308,14 @@
         </div>
         <div class="card-body">
             <div class="form-row">
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <div class="position-relative form-group">
-                        <label for="filter_date_from" class="">Date From</label>
-                        <input id="filter_date_from" type="date" class="form-control">
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="position-relative form-group">
-                        <label for="filter_date_to" class="">Date To</label>
-                        <input id="filter_date_to" type="date" class="form-control">
+                        <label for="filter_date" class="">Date</label>
+
+                        <div id="filter_date" class="pull-right" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc; width: 100%">
+                            <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>&nbsp;
+                            <span></span> <b class="caret"></b>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-2">
