--- a/prime_admin/templates/lms/students_audit_pdf.html
+++ b/prime_admin/templates/lms/students_audit_pdf.html
@@ -23,7 +23,7 @@
 
     @page {
       size: letter landscape;
-      margin: 2cm;
+      margin: 1cm;
     }
 
     .Row {
@@ -56,7 +56,7 @@
   <div style="text-align: center;">
     <h6 style="font-weight:lighter;margin: 5px;">BATCH NO.: {{batch_no}}</h6>
     <h6 style="font-weight:lighter;margin: 5px;">SCHEDULE: {{schedule}}</h6>
-    <h6 style="font-weight:lighter;margin: 5px;margin-bottom: 20px;">{{branch}} {% if branch == "ALL" %}BRANCHES{% else %}BRANCH{% endif %}</h6>
+    <h6 style="font-weight:lighter;margin: 5px;margin-bottom: 20px;">{{branch}} {% if branch == "ALL" %}BRANCHES{% endif %}</h6>
   </div>
 
   <div class="Row">
