--- a/prime_admin/templates/lms/cash_flow.html
+++ b/prime_admin/templates/lms/cash_flow.html
@@ -126,6 +126,7 @@
             "order": [[1, 'asc']],
             "processing": true,
             "serverSide": true,
+            "autoWidth": false,
             "ordering": false,
             "columnDefs": columnDefs,
             "ajax": {
@@ -159,13 +160,13 @@
         });
 
 
-
         var dtbl_fund_statement = $('#tbl_fund_statement').DataTable({
             "dom": 'rtip',
             "pageLength": 100,
             "order": [[1, 'asc']],
             "processing": true,
             "serverSide": true,
+            "autoWidth": false,
             "ordering": false,
             "columnDefs": fundColumnDefs,
             "ajax": {
@@ -196,6 +197,7 @@
             "dom": 'rtip',
             "pageLength": 100,
             "processing": true,
+            "autoWidth": false,
             "order": [[1, 'asc']],
             "ordering": false,
             "ajax": {
@@ -767,34 +769,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="row">
-                <div class="col-md-6 col-xl-6">
-                    <div class="card mb-3 widget-content bg-midnight-bloom">
-                        <div class="widget-content-wrapper text-white">
-                            <div class="widget-content-left">
-                                <div class="widget-heading">Total Orders</div>
-                                <div class="widget-subheading">Last year expenses</div>
-                            </div>
-                            <div class="widget-content-right">
-                                <div class="widget-numbers text-white"><span>1896</span></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-xl-6">
-                    <div class="card mb-3 widget-content bg-arielle-smile">
-                        <div class="widget-content-wrapper text-white">
-                            <div class="widget-content-left">
-                                <div class="widget-heading">Clients</div>
-                                <div class="widget-subheading">Total Clients Profit</div>
-                            </div>
-                            <div class="widget-content-right">
-                                <div class="widget-numbers text-white"><span>$ 568</span></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
             <h5>Gross Sale</h5>
             <div class="row">
                 <div class="col-lg-4 col-xl-4">
@@ -965,55 +939,79 @@
                     </div>
                 </div>
             </div>
-            <div class="table-responsive">
-                <table id="tbl_statement" class="align-middle mb-0 table table-bordered table-striped table-hover">
-                    <thead>
-                        <tr>
-                            {% for column in TABLE_OPTIONS['table_columns'] %}
-                            <th class="text-center">{{ column.upper() }}</th>
-                            {% endfor %}
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-            </div>
-
-            <h5 style="margin-top: 20px;">Fund 1 & 2 Statement</h5>
-            <div class="table-responsive">
-                <table id="tbl_fund_statement" class="align-middle mb-0 table table-bordered table-striped table-hover">
-                    <thead>
-                        <tr>
-                            {% for column in TABLE_OPTIONS['table_columns'] %}
-                            <th class="text-center">{{ column.upper() }}</th>
-                            {% endfor %}
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-            </div>
-
-            <h5 style="margin-top: 20px;">Profits history</h5>
-            <div class="table-responsive">
-                <table id="tbl_profits_history"
-                    class="align-middle mb-0 table table-bordered table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th class="text-center">DATE</th>
-                            <th class="text-center">NEW TOTAL GROSS SALES</th>
-                            <th class="text-center">PREV TOTAL GROSS SALES</th>
-                            <th class="text-center">NET</th>
-                            <th class="text-center">REMAINING</th>
-                            <th class="text-center">NEW FINAL FUND 1</th>
-                            <th class="text-center">PREV FINAL FUND 1</th>
-                            <th class="text-center">NEW FINAL FUND 2</th>
-                            <th class="text-center">PREV FINAL FUND 2</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
+            <ul class="tabs-animated-shadow nav-justified tabs-animated nav">
+                <li class="nav-item">
+                    <a role="tab" class="nav-link show active" id="tab-c1-0" data-toggle="tab"
+                        href="#tab-animated1-0" aria-selected="false">
+                        <span class="nav-text">SALES STATEMENT</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a role="tab" class="nav-link show" id="tab-c1-1" data-toggle="tab" href="#tab-animated1-1"
+                        aria-selected="false">
+                        <span class="nav-text">FUND 1 & 2 STATEMENT</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a role="tab" class="nav-link show" id="tab-c1-2" data-toggle="tab" href="#tab-animated1-2"
+                        aria-selected="true">
+                        <span class="nav-text">PROFITS HISTORY</span>
+                    </a>
+                </li>
+            </ul>
+            <div class="tab-content">
+                <div class="tab-pane show active" id="tab-animated1-0" role="tabpanel">
+                    <div class="table-responsive">
+                        <table id="tbl_statement" class="align-middle mb-0 table table-bordered table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    {% for column in TABLE_OPTIONS['table_columns'] %}
+                                    <th class="text-center">{{ column.upper() }}</th>
+                                    {% endfor %}
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="tab-pane show" id="tab-animated1-1" role="tabpanel">
+                    <div class="table-responsive">
+                        <table id="tbl_fund_statement" class="align-middle mb-0 table table-bordered table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    {% for column in TABLE_OPTIONS['table_columns'] %}
+                                    <th class="text-center">{{ column.upper() }}</th>
+                                    {% endfor %}
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="tab-pane show" id="tab-animated1-2" role="tabpanel">
+                    <div class="table-responsive">
+                        <table id="tbl_profits_history"
+                            class="align-middle mb-0 table table-bordered table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th class="text-center">DATE</th>
+                                    <th class="text-center">NEW TOTAL GROSS SALES</th>
+                                    <th class="text-center">PREV TOTAL GROSS SALES</th>
+                                    <th class="text-center">NET</th>
+                                    <th class="text-center">REMAINING</th>
+                                    <th class="text-center">NEW FINAL FUND 1</th>
+                                    <th class="text-center">PREV FINAL FUND 1</th>
+                                    <th class="text-center">NEW FINAL FUND 2</th>
+                                    <th class="text-center">PREV FINAL FUND 2</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
