--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -712,12 +712,13 @@
             "autoWidth": false,
             "serverSide": true,
             "ajax": {
-                "url": "/learning-management/branches/all/utilities/dt",
+                "url": "/learning-management/datatables/fund-wallet/utilities",
                 "dataSrc": function (json) {
-                    $("#total_utilities_tab").html("₱" + json.totalUtilities);
+                    $("#total_utilities_tab").html(json.totalUtilities);
                     return json.data;
                 },
                 "data": function (d) {
+                    d.branch = $("#btn_branch_label").val();
                     d.description = $("#filter_utilities_description").val();
                     d.date_from = $("#filter_utilities_date_from").val();
                     d.date_to = $("#filter_utilities_date_to").val();
@@ -1118,18 +1119,6 @@
                         </div>
                         <div class="tab-pane show" id="tab-animated1-2" role="tabpanel">
                             <div class="form-row">
-                                <!-- <div class="col-md-2 col-xs-2">
-                                    <div class="position-relative form-group">
-                                        <label for="filter_tab3_date_from" class="">Date From</label>
-                                        <input id="filter_tab3_date_from" type="date" class="form-control">
-                                    </div>
-                                </div>
-                                <div class="col-md-2 col-xs-2">
-                                    <div class="position-relative form-group">
-                                        <label for="filter_tab3_date_to" class="">Date To</label>
-                                        <input id="filter_tab3_date_to" type="date" class="form-control">
-                                    </div>
-                                </div> -->
                                 <div class="col-md-2 col-xs-2">
                                     <div class="position-relative form-group">
                                         <label for="filter_tab3_year" class="">Year</label>
@@ -1141,14 +1130,6 @@
                                         </select>
                                     </div>
                                 </div>
-                                <!-- <div class="col-md-2 col-xs-2">
-                                    <div class="position-relative form-group">
-                                        <label for="filter_tab3_description" class="">Description</label>
-                                        <select id="filter_tab3_description" class="form-control" required>
-                                            <option value="">Choose category first...</option>
-                                        </select>
-                                    </div>
-                                </div> -->
                             </div>
                             <div style="margin-top: 10px;" class="table-responsive">
                                 <table id="tbl_business_expenses"
@@ -1209,6 +1190,22 @@
                                                 class="border-0 btn-transition  btn btn-outline-primary">
                                                 OTHER EXPENSES
                                             </a>
+                                            <a data-toggle="tab" href="#tab-eg6-7"
+                                                class="border-0 btn-transition  btn btn-outline-primary">
+                                                BIR
+                                            </a>
+                                            <a data-toggle="tab" href="#tab-eg6-8"
+                                                class="border-0 btn-transition  btn btn-outline-primary">
+                                                BUSINESS PERMIT
+                                            </a>
+                                            <a data-toggle="tab" href="#tab-eg6-9"
+                                                class="border-0 btn-transition  btn btn-outline-primary">
+                                                EMPLOYEE BENEFITS
+                                            </a>
+                                            <a data-toggle="tab" href="#tab-eg6-10"
+                                                class="border-0 btn-transition  btn btn-outline-primary">
+                                                SNPL FEE
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -1226,8 +1223,8 @@
                                                                 <div class="widget-subheading"></div>
                                                             </div>
                                                             <div class="widget-content-right">
-                                                                <div class="widget-numbers text-success"><span
-                                                                        id="total_utilities_tab">₱ 0.00</span></div>
+                                                                <div class="widget-numbers text-success">₱ <span
+                                                                        id="total_utilities_tab">0.00</span></div>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -1386,26 +1383,6 @@
                                             </div>
                                         </div>
                                         <div class="tab-pane" id="tab-eg6-2" role="tabpanel">
-                                            <!-- <div class="row">
-                                                <div class="col-lg-4 col-xl-4">
-                                                </div>
-                                                <div class="col-lg-4 col-xl-4">
-                                                    <div class="card mb-3 widget-content">
-                                                        <div class="widget-content-wrapper">
-                                                            <div class="widget-content-left">
-                                                                <div class="widget-heading">Total</div>
-                                                                <div class="widget-subheading"></div>
-                                                            </div>
-                                                            <div class="widget-content-right">
-                                                                <div class="widget-numbers text-success"><span
-                                                                        id="total_office_supply_tab">₱ 0.00</span></div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-lg-4 col-xl-4">
-                                                </div>
-                                            </div> -->
                                             <div style="margin-top: 10px;" class="table-responsive">
                                                 <table id="tbl_salary"
                                                     class="align-middle mb-0 table table-bordered table-striped table-hover">
@@ -1426,26 +1403,6 @@
                                             </div>
                                         </div>
                                         <div class="tab-pane" id="tab-eg6-3" role="tabpanel">
-                                            <!-- <div class="row">
-                                                <div class="col-lg-4 col-xl-4">
-                                                </div>
-                                                <div class="col-lg-4 col-xl-4">
-                                                    <div class="card mb-3 widget-content">
-                                                        <div class="widget-content-wrapper">
-                                                            <div class="widget-content-left">
-                                                                <div class="widget-heading">Total</div>
-                                                                <div class="widget-subheading"></div>
-                                                            </div>
-                                                            <div class="widget-content-right">
-                                                                <div class="widget-numbers text-success"><span
-                                                                        id="total_office_supply_tab">₱ 0.00</span></div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-lg-4 col-xl-4">
-                                                </div>
-                                            </div> -->
                                             <div style="margin-top: 10px;" class="table-responsive">
                                                 <table id="tbl_rebate"
                                                     class="align-middle mb-0 table table-bordered table-striped table-hover">
@@ -1516,6 +1473,18 @@
                                                     </tbody>
                                                 </table>
                                             </div>
+                                        </div>
+                                        <div class="tab-pane" id="tab-eg6-7" role="tabpanel">
+                                            <p>Coming soon...</p>
+                                        </div>
+                                        <div class="tab-pane" id="tab-eg6-8" role="tabpanel">
+                                            <p>Coming soon...</p>
+                                        </div>
+                                        <div class="tab-pane" id="tab-eg6-9" role="tabpanel">
+                                            <p>Coming soon...</p>
+                                        </div>
+                                        <div class="tab-pane" id="tab-eg6-10" role="tabpanel">
+                                            <p>Coming soon...</p>
                                         </div>
                                     </div>
                                 </div>
