--- a/prime_admin/templates/lms/client_edit_modal.html
+++ b/prime_admin/templates/lms/client_edit_modal.html
@@ -102,7 +102,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-5 mb-3">
+                                <div id='div_upgrade_full_payment' class="col-md-5 mb-3">
                                     <div class="position-relative form-group">
                                         <div>
                                             <div class="custom-checkbox custom-control">
